<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="75dp"
    android:weightSum="1">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tech_2D"
        android:id="@+id/id_CB_2D"
        android:layout_margin="20dp" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tech_3D"
        android:id="@+id/id_CB_3D"
        android:layout_margin="20dp" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tech_imax"
        android:id="@+id/id_CB_imax"
        android:layout_margin="20dp" />

</LinearLayout>